--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Stack Workflow",
   "main": "index.js",
   "scripts": {
-    "cdn": "rsync -avr --progress dist/* tiye.me:cdn/coworkflow",
-    "tiye": "rsync -avr --progress dist/{index.html,manifest.json} tiye.me:repo/mvc-works/coworkflow/",
+    "cdn": "rsync -avr --progress dist/* tiye.me:cdn/display-colors",
+    "tiye": "rsync -avr --progress dist/{index.html,manifest.json} tiye.me:repo/chenyong/display-colors/",
     "upload": "yarn cdn && yarn tiye",
     "release": "shadow-cljs release browser",
     "watch": "shadow-cljs watch browser",
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:mvc-works/coworkflow.git"
+    "url": "git@github.com:chenyong/display-colors.git"
   },
   "author": "jiyinyiyong",
   "license": "MIT",
