--- a/package.json
+++ b/package.json
@@ -1,30 +1,29 @@
 {
-  "name": "coworkflow",
+  "name": "calcit-workflow",
   "version": "0.1.0",
-  "description": "Stack Workflow",
+  "description": "ClojureScript workflow using Calcit Editor",
   "main": "index.js",
   "scripts": {
-    "cdn": "rsync -avr --progress dist/* tiye.me:cdn/display-colors",
-    "tiye": "rsync -avr --progress dist/{index.html,manifest.json} tiye.me:repo/chenyong/display-colors/",
-    "upload": "yarn cdn && yarn tiye",
-    "release": "shadow-cljs release browser",
-    "watch": "shadow-cljs watch browser",
-    "compile-ssr": "shadow-cljs compile ssr",
-    "html-dev": "env=dev node target/ssr.js && cp entry/manifest.json target/",
-    "html": "node target/ssr.js && cp entry/manifest.json dist/",
-    "index.html": "yarn compile-ssr && yarn html-dev",
-    "del": "rm -rf dist/*",
-    "serve": "http-server dist -s",
-    "build": "yarn del && yarn release && yarn compile-ssr && yarn html"
+    "deploy": "clj -A:release",
+    "m2": "clj -A:release install",
+    "watch": "shadow-cljs watch client",
+    "build-cdn": "shadow-cljs clj-run build.main/build-cdn",
+    "build": "shadow-cljs clj-run build.main/build",
+    "up": "yarn build-cdn && tiye-up",
+    "page": "shadow-cljs clj-run build.main/page",
+    "ln": "cd target && rm -f entry && ln -s ../entry"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:chenyong/display-colors.git"
+    "url": "git@github.com:mvc-works/calcit-workflow.git"
   },
   "author": "jiyinyiyong",
   "license": "MIT",
   "devDependencies": {
-    "http-server": "^0.10.0",
-    "shadow-cljs": "^2.0.100"
+    "shadow-cljs": "^2.8.93"
+  },
+  "dependencies": {
+    "feather-icons": "^4.26.0",
+    "shortid": "^2.2.15"
   }
 }
