--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "shadow-cljs": "^2.8.93"
   },
   "dependencies": {
+    "color": "^3.1.2",
     "feather-icons": "^4.26.0",
     "shortid": "^2.2.15"
   }
