--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
   "author": "jiyinyiyong",
   "license": "MIT",
   "devDependencies": {
-    "shadow-cljs": "^2.8.95"
+    "shadow-cljs": "^2.10.5"
   },
   "dependencies": {
     "color": "^3.1.2",
+    "copy-to-clipboard": "^3.3.1",
     "feather-icons": "^4.28.0",
     "shortid": "^2.2.15"
   }
