--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   "author": "jiyinyiyong",
   "license": "MIT",
   "devDependencies": {
-    "shadow-cljs": "^2.10.5"
+    "shadow-cljs": "^2.10.14"
   },
   "dependencies": {
     "color": "^3.1.2",
     "copy-to-clipboard": "^3.3.1",
+    "d3-color": "^1.4.1",
     "feather-icons": "^4.28.0",
     "shortid": "^2.2.15"
   }
