--- a/package.json
+++ b/package.json
@@ -4,14 +4,6 @@
   "description": "ClojureScript workflow using Calcit Editor",
   "main": "index.js",
   "scripts": {
-    "deploy": "clj -A:release",
-    "m2": "clj -A:release install",
-    "watch": "shadow-cljs watch client",
-    "build-cdn": "shadow-cljs clj-run build.main/build-cdn",
-    "build": "shadow-cljs clj-run build.main/build",
-    "up": "yarn build-cdn && tiye-up",
-    "page": "shadow-cljs clj-run build.main/page",
-    "ln": "cd target && rm -f entry && ln -s ../entry"
   },
   "repository": {
     "type": "git",
@@ -20,9 +12,11 @@
   "author": "jiyinyiyong",
   "license": "MIT",
   "devDependencies": {
-    "shadow-cljs": "^2.10.17"
+    "bottom-tip": "^0.1.2",
+    "vite": "^2.5.0"
   },
   "dependencies": {
+    "@calcit/procs": "^0.4.19",
     "color": "^3.1.2",
     "copy-to-clipboard": "^3.3.1",
     "d3-color": "^1.4.1",
